-----
0.67  [to be released]
    [Added]
      - Full support for package declarations in step files
0.66  2019-09-22
    [Fixed]
      - Harnass outputs 'Scenario' and 'Feature' instead of the actual
        keywords from the feature file (e.g. 'Szenario')
    [Changed]
      - Dependency listing clean up
      - Test2::API minimum dependency updated
      - META.json generation -- now includes 'provides' as CPANTS wants
    [Added]
      - Scenario descriptions are now included in output
      - Support for multiple Examples per scenario
      - Support for tags on Examples
      - Support for description blocks in Examples
    [Removed]
      - Test files in t/old/ -- not run as tests
0.64  2019-09-15
    [Fixed]
      - Corrected List::Util dependency failing to declare 1.33 minimum
0.63  2019-09-15
    [Deprecated]
      - Mixing steps with comments is not allowed in Gherkin;
        support for mixing steps and comments will be removed in v1.0
    [Changed]
      - Gherkin parser refactoring for readability
    [Added]
      - Support for scenario descriptions: a block of explanatory text
        between the `Scenario:` keyword and the step lines
0.62  2019-09-09
    - Fix regression in 0.61 with `prove` plugin printing TAP on STDOUT
0.61  2019-09-07
    - Renamed Test::BDD::Cucumber::Harness::TestBuilder to
      Test::BDD::Cucumber::Harness::TAP for consistency with the
      other harnesses (which have output-based names)
    - Add support for step functions using Test2
    - Added documentation of availability of meta data defined with step
      functions for use by extensions to the Architecture manual
    - Split dependencies by Runtime vs TestRequires
0.60  2019-08-31
    - Added flag to make `pherkin` check for duplicate matching step
      functions to help debugging
    - Added option to specify meta data to step functions and use it in
      extensions; minimally available meta data identifies the file name