@@ -1,5 +1,5 @@
 name      = Test-BDD-Cucumber
-version   = 0.66
+version   = 0.67
 abstract  = Feature-complete Cucumber-style testing in Perl
 main_module = lib/Test/BDD/Cucumber.pm
 author    = Peter Sergeant <pete@clueball.com>
